[package]
name = "fcm_async"
version = "0.1.0"
authors = ["meir <meirdrago@gmail.com>"]
edition = "2018"



[dependencies]
pyo3 = {version = "0.13.2", features = ["extension-module"]}
fcm = "0.9.1"
pyo3-asyncio = { version = "0.13", features = ["tokio-runtime"] }
tokio = "1.4"
log = "*"
pyo3-log = "0.3.1"

[lib]
name = "fcm_async"
crate-type = ["cdylib"]



